--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 SENDGRID_API_KEY=''
 
 # from email address, subject line and notification receiver email
-FROM_EMAIL='noreply@thepytech.com'
-EMAIL_SUBJECT='The Py Tech - Codecanyon Sales Notifcation'
-SEND_EMAIL_TO='ashfaqsolangi@gmail.com'
+FROM_EMAIL='info@mydomain.com'
+EMAIL_SUBJECT='Codecanyon Sales Notifcation'
+SEND_EMAIL_TO='myemail@mydomain.com'
 
 # 0 to receive daily notifications (time is based on the cron-job you will set)
 # 1 to receive only when there is new sale
@@ -14,5 +14,5 @@ NOTIFY_ONLY_NEW_SALE=1
 # file name to store fetched sale number only
 SALES_COUNT_FILE_NAME='sales_count.txt'
 
-# Codecanyon Author page url
-AUTHOR_PAGE = 'https://codecanyon.net/user/dream_space'
+# Codecanyon Author page url (author username)
+AUTHOR_PAGE = 'https://codecanyon.net/user/author_user_name'
